--- a/app/views/home/six.html.erb
+++ b/app/views/home/six.html.erb
@@ -136,10 +136,10 @@ function setZoomable(zoomable) {
         
             <div class="flex-menu">
                 <h1 class="p">메인 메뉴</h1>
-                <p class="menu p"><%= Find.where(num_id:5).first.name %> : <%= @abc.find(34).price %></p>
-                <p class="menu p"><%= Find.where(num_id:5).second.name %> : <%= @abc.find(35).price %></p>
-                <p class="menu p"><%= Find.where(num_id:5).third.name %> : <%= @abc.find(36).price %></p>
-                <p class="menu p"><%= Find.where(num_id:5).fourth.name %> : <%= @abc.find(36).price %></p>
+                <p class="menu p"><%= Find.where(store_id:5).first.menu %> : <%= @abc.find(32).menu_price %></p>
+                <p class="menu p"><%= Find.where(store_id:5).second.menu %> : <%= @abc.find(33).menu_price %></p>
+                <p class="menu p"><%= Find.where(store_id:5).third.menu %> : <%= @abc.find(34).menu_price %></p>
+                <p class="menu p"><%= Find.where(store_id:5).fourth.menu %> : <%= @abc.find(34).menu_price %></p>
             </div>
         </div>
         
