--- a/app/views/home/third.html.erb
+++ b/app/views/home/third.html.erb
@@ -139,10 +139,10 @@ function setZoomable(zoomable) {
                 
             <div class="flex-menu">
                 <h1 class="p">점심 메뉴</h1>
-                <p class="menu p"><%= Find.where(num_id:11).first.name %> : <%= @abc.find(71).price %></p>
-                <p class="menu p"><%= Find.where(num_id:11).second.name %> : <%= @abc.find(72).price %></p>
-                <p class="menu p"><%= Find.where(num_id:11).third.name %> : <%= @abc.find(73).price %></p>
-                <p class="menu p"><%= Find.where(num_id:11).last.name %> : <%= @abc.find(74).price %></p>
+                <p class="menu p"><%= Find.where(store_id:11).first.menu %> : <%= @abc.find(69).menu_price %></p>
+                <p class="menu p"><%= Find.where(store_id:11).second.menu %> : <%= @abc.find(70).menu_price %></p>
+                <p class="menu p"><%= Find.where(store_id:11).third.menu %> : <%= @abc.find(71).menu_price %></p>
+                <p class="menu p"><%= Find.where(store_id:11).last.menu %> : <%= @abc.find(72).menu_price %></p>
                 <a href="https://mblogthumb-phinf.pstatic.net/20151124_89/b901018_14483429442420GhJJ_JPEG/NaverBlog_20151124_142904_01.jpg?type=w2" class="menu p" target="blank">더 많은 메뉴보러가기</a>
             </div>
         </div>
