--- a/app/views/home/eight.html.erb
+++ b/app/views/home/eight.html.erb
@@ -136,12 +136,12 @@ function setZoomable(zoomable) {
         
             <div class="flex-menu">
                 <h1 class="p">점심 메뉴</h1>
-                 <p class="menu p"><%= Find.where(num_id:7).first.name %> : <%= @abc.find(45).price %></p>
-                <p class="menu p"><%= Find.where(num_id:7).second.name %> : <%= @abc.find(46).price %></p>
-                <p class="menu p"><%= Find.where(num_id:7).third.name %> : <%= @abc.find(46).price %></p>
-                <p class="menu p"><%= Find.where(num_id:7).fourth.name %> : <%= @abc.find(48).price %></p>
-                <p class="menu p"><%= Find.where(num_id:7).fifth.name %> : <%= @abc.find(48).price %></p>
-                <p class="menu p"><%= Find.where(num_id:7).last.name %> : <%= @abc.find(50).price %></p>
+                 <p class="menu p"><%= Find.where(store_id:7).first.menu %> : <%= @abc.find(43).menu_price %></p>
+                <p class="menu p"><%= Find.where(store_id:7).second.menu %> : <%= @abc.find(44).menu_price %></p>
+                <p class="menu p"><%= Find.where(store_id:7).third.menu %> : <%= @abc.find(44).menu_price %></p>
+                <p class="menu p"><%= Find.where(store_id:7).fourth.menu %> : <%= @abc.find(46).menu_price %></p>
+                <p class="menu p"><%= Find.where(store_id:7).fifth.menu %> : <%= @abc.find(46).menu_price %></p>
+                <p class="menu p"><%= Find.where(store_id:7).last.menu %> : <%= @abc.find(48).menu_price %></p>
             </div>
         </div>
         
