--- a/app/views/home/fifth.html.erb
+++ b/app/views/home/fifth.html.erb
@@ -139,10 +139,10 @@ function setZoomable(zoomable) {
                 
             <div class="flex-menu">
                 <h1 class="p">점심 메뉴</h1>
-                <p class="menu p"><%= Find.where(num_id:13).first.name %> : <%= @abc.find(84).price %></p>
-                <p class="menu p"><%= Find.where(num_id:13).second.name %> : <%= @abc.find(85).price %></p>
-                <p class="menu p"><%= Find.where(num_id:13).third.name %> : <%= @abc.find(85).price %></p>
-                <p class="menu p"><%= Find.where(num_id:13).last.name %> : <%= @abc.find(87).price %></p>
+                <p class="menu p"><%= Find.where(store_id:13).first.menu %> : <%= @abc.find(82).menu_price %></p>
+                <p class="menu p"><%= Find.where(store_id:13).second.menu %> : <%= @abc.find(83).menu_price %></p>
+                <p class="menu p"><%= Find.where(store_id:13).third.menu %> : <%= @abc.find(83).menu_price %></p>
+                <p class="menu p"><%= Find.where(store_id:13).last.menu %> : <%= @abc.find(85).menu_price %></p>
                 
             </div>
         </div>
