--- a/app/views/home/four.html.erb
+++ b/app/views/home/four.html.erb
@@ -137,14 +137,14 @@ function setZoomable(zoomable) {
         
             <div class="flex-menu">
                 <h1 class="p">점심 메뉴</h1>
-               <p class="menu p"><%= Find.where(num_id:3).first.name %> : <%= @abc.find(23).price %></p>
-                <p class="menu p"><%= Find.where(num_id:3).second.name %> : <%= @abc.find(23).price %></p>
-                <p class="menu p"><%= Find.where(num_id:3).third.name %> : <%= @abc.find(23).price %></p>
-                <p class="menu p"><%= Find.where(num_id:3).fourth.name %> : <%= @abc.find(23).price %></p>
-                <p class="menu p"><%= Find.where(num_id:3).fifth.name %> : <%= @abc.find(23).price %></p>
-                <p class="menu p"><%= Find.where(num_id:3).last(3).first.name %> : <%= @abc.find(23).price %></p>
-                <p class="menu p"><%= Find.where(num_id:3).last(2).first.name %> : <%= @abc.find(23).price %></p>
-                <p class="menu p"><%= Find.where(num_id:3).last.name %> : <%= @abc.find(23).price %></p>
+               <p class="menu p"><%= Find.where(store_id:3).first.menu %> : <%= @abc.find(23).menu_price %></p>
+                <p class="menu p"><%= Find.where(store_id:3).second.menu %> : <%= @abc.find(23).menu_price %></p>
+                <p class="menu p"><%= Find.where(store_id:3).third.menu %> : <%= @abc.find(23).menu_price %></p>
+                <p class="menu p"><%= Find.where(store_id:3).fourth.menu %> : <%= @abc.find(23).menu_price %></p>
+                <p class="menu p"><%= Find.where(store_id:3).fifth.menu %> : <%= @abc.find(23).menu_price %></p>
+                <p class="menu p"><%= Find.where(store_id:3).last(3).first.menu %> : <%= @abc.find(23).menu_price %></p>
+                <p class="menu p"><%= Find.where(store_id:3).last(2).first.menu %> : <%= @abc.find(23).menu_price %></p>
+                <p class="menu p"><%= Find.where(store_id:3).last.menu %> : <%= @abc.find(23).menu_price %></p>
         </div>
         
     </div>
