--- a/app/views/home/fourth.html.erb
+++ b/app/views/home/fourth.html.erb
@@ -139,14 +139,14 @@ function setZoomable(zoomable) {
                 
             <div class="flex-menu">
                 <h1 class="p">점심 메뉴</h1>
-                <p class="menu p"><%= Find.where(num_id:12).first.name %> : <%= @abc.find(75).price %></p>
-                <p class="menu p"><%= Find.where(num_id:12).second.name %> : <%= @abc.find(76).price %></p>
-                <p class="menu p"><%= Find.where(num_id:12).fourth.name %> : <%= @abc.find(78).price %></p>
-                <p class="menu p"><%= Find.where(num_id:12).fifth.name %> : <%= @abc.find(79).price %></p>
-                <p class="menu p"><%= Find.where(num_id:12).last(4).first.name %> : <%= @abc.find(80).price %></p>
-                <p class="menu p"><%= Find.where(num_id:12).last(3).first.name %> : <%= @abc.find(81).price %></p>
-                <p class="menu p"><%= Find.where(num_id:12).last(2).first.name %> : <%= @abc.find(82).price %></p>
-                <p class="menu p"><%= Find.where(num_id:12).last.name %> : <%= @abc.find(83).price %></p>
+                <p class="menu p"><%= Find.where(store_id:12).first.menu %> : <%= @abc.find(73).menu_price %></p>
+                <p class="menu p"><%= Find.where(store_id:12).second.menu %> : <%= @abc.find(74).menu_price %></p>
+                <p class="menu p"><%= Find.where(store_id:12).fourth.menu %> : <%= @abc.find(76).menu_price %></p>
+                <p class="menu p"><%= Find.where(store_id:12).fifth.menu %> : <%= @abc.find(77).menu_price %></p>
+                <p class="menu p"><%= Find.where(store_id:12).last(4).first.menu %> : <%= @abc.find(78).menu_price %></p>
+                <p class="menu p"><%= Find.where(store_id:12).last(3).first.menu %> : <%= @abc.find(79).menu_price %></p>
+                <p class="menu p"><%= Find.where(store_id:12).last(2).first.menu %> : <%= @abc.find(80).menu_price %></p>
+                <p class="menu p"><%= Find.where(store_id:12).last.menu %> : <%= @abc.find(81).menu_price %></p>
         </div>
          
          
