--- a/app/views/home/one.html.erb
+++ b/app/views/home/one.html.erb
@@ -139,12 +139,12 @@ function setZoomable(zoomable) {
                 
             <div class="flex-menu">
                 <h1 class="p">점심 메뉴</h1>
-                <p class="menu p"><%= Find.where(num_id:1).first.name %> : <%= @abc.find(3).price %></p>
-                <p class="menu p"><%= Find.where(num_id:1).second.name %> : <%= @abc.find(3).price %></p>
-                <p class="menu p"><%= Find.where(num_id:1).third.name %> : <%= @abc.find(3).price %></p>
-                <p class="menu p"><%= Find.where(num_id:1).fourth.name %> : <%= @abc.find(3).price %></p>
-                <p class="menu p"><%= Find.where(num_id:1).fifth.name %> : <%= @abc.find(7).price %></p>
-                <p class="menu p"><%= Find.where(num_id:1).last.name %> : <%= @abc.find(3).price %></p>
+                <p class="menu p"><%= Find.where(store_id:1).first.menu %> : <%= @abc.find(3).menu_price %></p>
+                <p class="menu p"><%= Find.where(store_id:1).second.menu %> : <%= @abc.find(3).menu_price %></p>
+                <p class="menu p"><%= Find.where(store_id:1).third.menu %> : <%= @abc.find(3).menu_price %></p>
+                <p class="menu p"><%= Find.where(store_id:1).fourth.menu %> : <%= @abc.find(3).menu_price %></p>
+                <p class="menu p"><%= Find.where(store_id:1).fifth.menu %> : <%= @abc.find(7).menu_price %></p>
+                <p class="menu p"><%= Find.where(store_id:1).last.menu %> : <%= @abc.find(3).menu_price %></p>
             </div>
         </div>
          
