--- a/app/views/home/seven.html.erb
+++ b/app/views/home/seven.html.erb
@@ -135,13 +135,13 @@ function setZoomable(zoomable) {
         
             <div class="flex-menu">
                 <h1 class="p">점심 메뉴</h1>
-                <p class="menu p"><%= Find.where(num_id:6).first.name %> : <%= @abc.find(38).price %></p>
-                <p class="menu p"><%= Find.where(num_id:6).second.name %> : <%= @abc.find(39).price %></p>
-                <p class="menu p"><%= Find.where(num_id:6).third.name %> : <%= @abc.find(39).price %></p>
-                <p class="menu p"><%= Find.where(num_id:6).fourth.name %> : <%= @abc.find(39).price %></p>
-                <p class="menu p"><%= Find.where(num_id:6).fifth.name %> : <%= @abc.find(39).price %></p>
-                <p class="menu p"><%= Find.where(num_id:6).last(2).first.name %> : <%= @abc.find(39).price %></p>
-                <p class="menu p"><%= Find.where(num_id:6).last.name %> : <%= @abc.find(38).price %></p>
+                <p class="menu p"><%= Find.where(store_id:6).first.menu %> : <%= @abc.find(36).menu_price %></p>
+                <p class="menu p"><%= Find.where(store_id:6).second.menu %> : <%= @abc.find(37).menu_price %></p>
+                <p class="menu p"><%= Find.where(store_id:6).third.menu %> : <%= @abc.find(37).menu_price %></p>
+                <p class="menu p"><%= Find.where(store_id:6).fourth.menu %> : <%= @abc.find(37).menu_price %></p>
+                <p class="menu p"><%= Find.where(store_id:6).fifth.menu %> : <%= @abc.find(37).menu_price %></p>
+                <p class="menu p"><%= Find.where(store_id:6).last(2).first.menu %> : <%= @abc.find(37).menu_price %></p>
+                <p class="menu p"><%= Find.where(store_id:6).last.menu %> : <%= @abc.find(36).menu_price %></p>
             </div>
         </div>
         
