--- a/app/views/home/sixth.html.erb
+++ b/app/views/home/sixth.html.erb
@@ -139,12 +139,12 @@ function setZoomable(zoomable) {
                 
             <div class="flex-menu">
                 <h1 class="p">점심 메뉴</h1>
-                <p class="menu p"><%= Find.where(num_id:14).first.name %> : <%= @abc.find(88).price %></p>
-                <p class="menu p"><%= Find.where(num_id:14).second.name %> : <%= @abc.find(88).price %></p>
-                <p class="menu p"><%= Find.where(num_id:14).third.name %> : <%= @abc.find(90).price %></p>
-                <p class="menu p"><%= Find.where(num_id:14).fourth.name %> : <%= @abc.find(88).price %></p>
-                <p class="menu p"><%= Find.where(num_id:14).fifth.name %> : <%= @abc.find(88).price %></p>
-                <p class="menu p"><%= Find.where(num_id:14).last.name %> : <%= @abc.find(90).price %></p>
+                <p class="menu p"><%= Find.where(store_id:14).first.menu %> : <%= @abc.find(86).menu_price %></p>
+                <p class="menu p"><%= Find.where(store_id:14).second.menu %> : <%= @abc.find(86).menu_price %></p>
+                <p class="menu p"><%= Find.where(store_id:14).third.menu %> : <%= @abc.find(88).menu_price %></p>
+                <p class="menu p"><%= Find.where(store_id:14).fourth.menu %> : <%= @abc.find(86).menu_price %></p>
+                <p class="menu p"><%= Find.where(store_id:14).fifth.menu %> : <%= @abc.find(86).menu_price %></p>
+                <p class="menu p"><%= Find.where(store_id:14).last.menu %> : <%= @abc.find(88).menu_price %></p>
                 <a href="https://search.naver.com/search.naver?sm=tab_niv&ie=utf8&where=image&query=%EC%97%AD%EC%82%BC%20%ED%98%B8%ED%83%80%EB%A3%A8%20%EB%A9%94%EB%89%B4&nso=so%3Ar%2Ca%3Aall%2Cp%3Aall#imgId=blog110917530%7C1%7C220673748882_4&vType=rollout" class="menu p" target="blank">더 많은 메뉴보러가기</a>
                 
                 
