--- a/app/views/home/two.html.erb
+++ b/app/views/home/two.html.erb
@@ -135,13 +135,13 @@ function setZoomable(zoomable) {
         
             <div class="flex-menu">
                 <h1 class="p">점심 메뉴</h1>
-                <p class="menu p"><%= Find.where(num_id:2).first.name %> : <%= @abc.find(9).price %></p>
-                <p class="menu p"><%= Find.where(num_id:2).second.name %> : <%= @abc.find(9).price %></p>
-                <p class="menu p"><%= Find.where(num_id:2).third.name %> : <%= @abc.find(9).price %></p>
-                <p class="menu p"><%= Find.where(num_id:2).fourth.name %> : <%= @abc.find(12).price %></p>
-                <p class="menu p"><%= Find.where(num_id:2).fifth.name %> : <%= @abc.find(13).price %></p>
-                <p class="menu p"><%= Find.where(num_id:2).last(2).first.name %> : <%= @abc.find(13).price %></p>
-                <p class="menu p"><%= Find.where(num_id:2).last.name %> : <%= @abc.find(15).price %></p>
+                <p class="menu p"><%= Find.where(store_id:2).first.menu %> : <%= @abc.find(7).menu_price %></p>
+                <p class="menu p"><%= Find.where(store_id:2).second.menu %> : <%= @abc.find(7).menu_price %></p>
+                <p class="menu p"><%= Find.where(store_id:2).third.menu %> : <%= @abc.find(7).menu_price %></p>
+                <p class="menu p"><%= Find.where(store_id:2).fourth.menu %> : <%= @abc.find(10).menu_price %></p>
+                <p class="menu p"><%= Find.where(store_id:2).fifth.menu %> : <%= @abc.find(11).menu_price %></p>
+                <p class="menu p"><%= Find.where(store_id:2).last(2).first.menu %> : <%= @abc.find(11).menu_price %></p>
+                <p class="menu p"><%= Find.where(store_id:2).last.menu %> : <%= @abc.find(13).menu_price %></p>
 
             </div>
         </div>
