--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,8 +1,8 @@
 <header class="header">
 <div class="container">
     <div class="top-box">
-        <img src="https://vsquare-dngusspt1.c9users.io/vs.png" id="imgone">
-        <img src="https://vsquare-dngusspt1.c9users.io/vsw.png" id="imgtwo">
+        <img src="./vs.png" id="imgone">
+        <img src="./vsw.png" id="imgtwo">
         <div class="swing">
             <p class="title-p p" >점 심 시 간</p>
         </div>
@@ -53,7 +53,7 @@
     }
     <% else %>
     function check(){
-       alert("회원가입 후 이용해주세요.")
+       alert("로그인 후 이용해주세요.")
     }
     <% end %>
  
