--- a/app/views/home/select.html.erb
+++ b/app/views/home/select.html.erb
@@ -6,20 +6,20 @@
 <section class="sectiona">
        <div class ="container">
         <article class="article">
-          <button class="btn" style="height:650px;" onclick="location.href='choice'"><img
-          src="https://vsquare-dngusspt1.c9users.io/store.jpg"></button>
+          <button class="btn" style="height:650px mobile;" onclick="location.href='choice'"><img
+          src="./store.jpg"></button>
           <p class="abc p">회사 주변 가게들</p>
         
         </article>
         <article class="article1">
-          <button class="btn" style="height:650px;"onclick="location.href='random'"><img
-          src="https://vsquare-dngusspt1.c9users.io/roulette.jpg"></button>
+          <button class="btn" style="height:650px mobile;"onclick="location.href='random'"><img
+          src="./roulette.jpg"></button>
           <p class="abc p">룰렛 돌리기</p>
         
         </article>
       </div>
 </section>
-<footer class="footer" id="footer1">
+<footer class="footer3" id="footer1">
     <div class ="container" >
     	<p class="p">Copyright(C) 2017 남서울대학교 by 정우현.</p>
     </div>
