--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,7 @@
 <script type=text/javascript src=jquery.tinysort.min.js></script>
 <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 
-<link href=https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.css type=text/css rel=stylesheet>
+<link href=https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.css?ver=1 type=text/css rel=stylesheet>
     <!-- 합쳐지고 최소화된 최신 CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
   
