--- a/app/assets/stylesheets/choice.css
+++ b/app/assets/stylesheets/choice.css
@@ -1,7 +1,71 @@
 * {
   box-sizing: border-box;
 }
+@media screen and (min-width: 1111px) {
 body {
+  margin: 0;
+  padding: 0;
+  
+}
+.desktop_hide{
+    display: none;
+}
+.map{
+    width:100%;
+    height:600px;
+}
+.img-fluid{
+    padding: 15px;
+}
+.img-fluid2{
+    padding: 15px;
+}
+    
+.one{
+    text-align: center;
+    font-size: 20px;
+}
+.two{
+    text-align: center;
+    font-size: 20px;
+}
+.three{
+    text-align: center;
+    font-size: 20px;
+}
+.four{
+    text-align: center;
+    font-size: 20px;
+}
+.five{
+    text-align: center;
+    font-size: 20px;
+}
+.six{
+    text-align: center;
+    font-size: 20px;
+}
+.seven{
+    text-align: center;
+    font-size: 20px;
+}
+.eight{
+    text-align: center;
+    font-size: 20px;
+}
+.nine{
+    text-align: center;
+    font-size: 20px;
+    
+}
+
+    ul.pagination{
+        margin-left: 850px;
+    }
+ 
+}
+@media screen and (min-width: 768px) and (max-width: 1110px) {
+    body {
   margin: 0;
   padding: 0;
   
@@ -49,4 +113,121 @@ body {
     text-align: center;
     font-size: 20px;
 }
+}
 
+@media screen and (max-width: 767px) {
+    body {
+  margin: 0;
+  padding: 0;
+  height: 667px;
+  
+
+}
+    
+    #map1{
+        display: none;
+    }
+    .map{
+    margin-left:25px;
+    width:320px;
+    height:250px;
+}
+    .abtn{
+        display: none;
+    }
+    .mobile_hide{
+        display: none;
+    }
+    .text-center{
+        margin-bottom: 20px;
+    }
+
+  
+
+    .one{
+        text-align: center;
+        font-size: 11px;
+    }
+    .two{
+        text-align: center;
+        font-size: 11px;
+    }
+    .three{
+        text-align: center;
+        font-size: 11px;
+    }
+    .four{
+        text-align: center;
+        font-size: 11px;
+    }
+    .five{
+        text-align: center;
+        font-size: 11px;
+    }
+    .six{
+        text-align: center;
+        font-size: 11px;
+    }
+    .seven{
+        text-align: center;
+        font-size: 11px;
+    }
+    .eight{
+        text-align: center;
+        font-size: 11px;
+    }
+    .nine{
+        text-align: center;
+        font-size: 11px;
+    }
+    .first{
+        text-align: center;
+        font-size: 11px;
+    }
+    .second{
+        text-align: center;
+        font-size: 11px;
+    }
+    .third{
+        text-align: center;
+        font-size: 11px;
+    }
+    .fourth{
+        text-align: center;
+        font-size: 11px;
+    }
+    .fifth{
+        text-align: center;
+        font-size: 11px;
+    }
+    .sixth{
+        text-align: center;
+        font-size: 11px;
+    }
+    .seventh{
+        text-align: center;
+        font-size: 11px;
+    }
+    .eighth{
+        text-align: center;
+        font-size: 11px;
+    }
+    .ninth{
+        text-align: center;
+        font-size: 11px;
+    }
+    ul.pagination{
+        margin-left: 65px;
+    }
+
+     .footer {
+    padding: 10px;
+    text-align: center;
+    background-color: #cccccc;
+    font-weight: 5px;
+    
+  }
+  .footer p{
+      font-size: 11px;
+  }
+}
