--- a/app/assets/stylesheets/flex.css
+++ b/app/assets/stylesheets/flex.css
@@ -1,6 +1,7 @@
 *{
     box-sizing: border-box;
 }
+@media screen and (min-width: 1121px) {
 .flex{
 
     display: flex;
@@ -33,4 +34,45 @@
 .menuf {
     margin-top: 15px;
     font-size: 18px;
+}
+}
+@media screen and (max-width: 767px) {
+    body {
+    margin: 0;
+    padding: 0;
+    
+  }
+    .flex{
+
+    display: flex;
+    flex-direction: row;
+}
+.flex-info {
+    display: flex;
+    flex-direction: column;
+}
+.flex-time {
+    flex-basis: 50%;
+}
+.flex-destination {
+    flex-basis: 50%;
+    margin-top: 10px;
+}
+
+.flex-menu {
+    flex-basis: 50%;
+    margin-left: 20px;
+}
+.time {
+    margin-top: 30px;
+    font-size: 10px;
+}
+.menu {
+    margin-top: 15px;
+    font-size: 10px;
+}
+.menuf {
+    margin-top: 15px;
+    font-size: 18px;
+}
 }
