--- a/app/assets/stylesheets/select.css
+++ b/app/assets/stylesheets/select.css
@@ -180,6 +180,7 @@
   }
   .abc{
       font-size:30px;
+      padding-top: 30px;
   }
   .abc p{
     text-align: center;
@@ -240,6 +241,7 @@
       background-image: url("https://vsquare-dngusspt1.c9users.io/bg.png");
       background-size: cover;
       background-position: center center;
+      height:660px;
   }
   a:visited, a:link {
     text-decoration: none;
@@ -274,7 +276,7 @@
       height:50px;
   }
   .header1 {
-    height: 200px;
+    height: 150px;
     background-image: url("./bg.jpg");
     /*배경 이미지가 지정된 영역을 꽉차게 만들어 주는 선언~!*/
     background-size: cover;
@@ -288,22 +290,26 @@
     /*불필요한 마진을 없앤다.*/
     margin-top: 0px;
     /*아래의 글과 간격을 두기 위해 'margin-bottom'값을 설정한다.*/
-    margin-bottom: 20px;
-    padding-top: 60px;
+
+    padding-top: 20px;
     color: #2c3e50;
-    height:200px;
+    height:150px;
   }
 
   .abc{
       font-size: 15px;
+      
   }
   .abc p{
     text-align: center;
   }
+  .mobile{
+    height: 200px;
+  }
   .sectiona {
     text-align: center;
-    padding: 20px 0 ;
-    height: 400px;
+    padding: 10px 0 ;
+    height: 200px;
     
   
   }
@@ -326,25 +332,25 @@
   
   .sectiona article img {
     width: 100%;
-    height: 300px;
+    height: 250px;
   }
   
   .sectiona article p {
     font-weight: bold;
-    margin-top: 20px;
-    margin-left: 30px;
+    margin-top: 10px;
+    margin-left: 10px;
     
   }
-
-  
-  .footer {
-    padding: 15px;
+ .footer3 {
+    padding:15px;
     text-align: center;
     background-color: #cccccc;
     font-weight: 5px;
-    margin-top: 20px;
+    margin-top: 150px;
+    
   }
-  .footer p{
-      font-size: 10px;
+  .footer3 p{
+      font-size: 15px;
   }
+  
 }
