--- a/app/views/home/first.html.erb
+++ b/app/views/home/first.html.erb
@@ -1,7 +1,7 @@
 <header class ="header2">
     	<div class="hdtitle">
-    <div id="map" style="width:100%;height:600px;"></div>
-    <p class"=abtn">
+    <div id="map" class="map"></div>
+    <p class="abtn">
 <button onclick="setZoomable(false)">지도 확대/축소 끄기</button>
 <button onclick="setZoomable(true)">지도 확대/축소 켜기</button>
 </p>
