--- a/app/views/home/one.html.erb
+++ b/app/views/home/one.html.erb
@@ -1,9 +1,9 @@
 <header class ="header2">
     	<div class="hdtitle">
-    <div id="map" style="width:100%;height:600px;"></div>
-    <p class"=abtn">
-<button onclick="setZoomable(false)">지도 확대/축소 끄기</button>
-<button onclick="setZoomable(true)">지도 확대/축소 켜기</button>
+    <div id="map" class="map"></div>
+    <p class="abtn">
+    <button onclick="setZoomable(false)">지도 확대/축소 끄기</button>
+    <button onclick="setZoomable(true)">지도 확대/축소 켜기</button>
 </p>
     <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=81e01e9df0a5b2aa0b541ae45aca55dc"></script>
 
