--- a/app/views/home/sixth.html.erb
+++ b/app/views/home/sixth.html.erb
@@ -1,7 +1,7 @@
 <header class ="header2">
     	<div class="hdtitle">
-    <div id="map" style="width:100%;height:600px;"></div>
-    <p class"=abtn">
+    <div id="map" class="map"></div>
+    <p class="abtn">
 <button onclick="setZoomable(false)">지도 확대/축소 끄기</button>
 <button onclick="setZoomable(true)">지도 확대/축소 켜기</button>
 </p>
@@ -12,7 +12,7 @@
 var mapContainer = document.getElementById('map'), // 지도의 중심좌표
     mapOption = { 
         center: new daum.maps.LatLng(37.500074, 127.040970), // 지도의 중심좌표
-        level: 3 // 지도의 확대 레벨
+        level: 4 // 지도의 확대 레벨
     }; 
 
 var map = new daum.maps.Map(mapContainer, mapOption); // 지도를 생성합니다
