--- a/app/views/home/fifth.html.erb
+++ b/app/views/home/fifth.html.erb
@@ -12,7 +12,8 @@
 var mapContainer = document.getElementById('map'), // 지도의 중심좌표
     mapOption = { 
         center: new daum.maps.LatLng(37.500074, 127.040970), // 지도의 중심좌표
-        level: 4 // 지도의 확대 레벨
+        level: 4
+        // 지도의 확대 레벨
     }; 
 
 var map = new daum.maps.Map(mapContainer, mapOption); // 지도를 생성합니다
